--- a/recipe.yml
+++ b/recipe.yml
@@ -5,7 +5,7 @@ name: ubluedemo
 
 # The native container image to build on top of.
 # Warning: Non-uBlue images might not work properly, due to missing components.
-base-image: ghcr.io/ublue-os/bluefin:38
+base-image: ghcr.io/ublue-os/bluefin
 
 # What Fedora version to use. Use an explicit version or `latest`.
 # If you use `latest`, you will be automatically updated to the next major
