--- a/recipe.yml
+++ b/recipe.yml
@@ -5,7 +5,7 @@ name: ubluedemo
 
 # The native container image to build on top of.
 # Warning: Non-uBlue images might not work properly, due to missing components.
-base-image: ghcr.io/ublue-os/silverblue-main
+base-image: ghcr.io/ublue-os/bluefin
 
 # What Fedora version to use. Use an explicit version or `latest`.
 # If you use `latest`, you will be automatically updated to the next major
@@ -72,7 +72,7 @@ rpm:
     # Remove the native firefox (from Fedora) in favor of the Flatpak.
     - firefox
     - firefox-langpacks
-    - gnome-terminal-server
+    - gnome-terminal
 
 # Configuration for the "first boot" experience, which is available after login.
 firstboot:
