--- a/recipe.yml
+++ b/recipe.yml
@@ -70,9 +70,9 @@ rpm:
   # image build, BEFORE installing custom RPMs (from the "rpm.install" category).
   remove:
     # Remove the native firefox (from Fedora) in favor of the Flatpak.
-    - firefox
-    - firefox-langpacks
-    - gnome-terminal
+    #- firefox
+    #- firefox-langpacks
+    #- gnome-terminal
 
 # Configuration for the "first boot" experience, which is available after login.
 firstboot:
