--- a/recipe.yml
+++ b/recipe.yml
@@ -48,6 +48,8 @@ rpm:
   repos:
     # Example (which also demonstrates version number expansion):
     # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%FEDORA_VERSION%/atim-starship-fedora-%FEDORA_VERSION%.repo
+    wezterm:
+    - https://copr.fedorainfracloud.org/coprs/stefan-maassen/wezterm/repo/fedora-38/stefan-maassen-wezterm-fedora-38.repo
 
   # These RPMs will be installed from your enabled repositories (Fedora's own
   # repos, extra "repos" you've added, etc). The installation is automatically
@@ -64,6 +66,9 @@ rpm:
     # Add your own below:
     # Example:
     - alacritty
+    - wezterm
+    - zoxide
+    - neofetch
     
 
   # These RPMs will be removed from the system image. This step happens during
